Fixes question alignment, page titles, favicon darker, 404 page

--- a/ama/static/css/questions.css
+++ b/ama/static/css/questions.css
@@ -2,6 +2,14 @@
 	margin-bottom: 15px;
 }
 
+.question-area60{
+	margin-left: 60px;
+}
+
+.question-area110{
+	margin-left: 110px;
+}
+
 .question-options{
 	float: left;
 	padding: 10px 10px 0 10px;
